--- a/circular_charts/index.html
+++ b/circular_charts/index.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,103 +13,157 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
-  <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
-  <script src="assets/js/jquery.js"></script>
-  <script src="assets/js/kinetic.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet'
+  type='text/css'>
+  <script src="../assets/js/jquery.js"></script>
+  <script src="../assets/js/kinetic.js"></script>
   <style type="text/css">
-  #kinetic_charts canvas{ left: 0; top: 0;}
-  #legends{ width: 900px; margin: 0 auto;}
-  #legends span{ height: 10px; width: 10px; margin-right: 10px; float: left;}
-  #legends div{ float: left; margin-right: 20px;}
+    body {
+      font-family: helvetica, arial;
+    }
+    #kinetic_charts canvas {
+      left: 0;
+      top: 0;
+    }
+    #legends {
+      width: 900px;
+      margin: 0 auto;
+    }
+    #legends span {
+      height: 10px;
+      width: 10px;
+      margin-right: 10px;
+      float: left;
+    }
+    #legends div {
+      float: left;
+      margin-right: 20px;
+    }
   </style>
 </head>
+
 <body>
-<!--[if lt IE 7]>
-<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+  <!--[if lt IE 7]>
+<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 <![endif]-->
-<center><h1 style="margin-top: 100px; color: #567; font-family: 'Titillium Web', sans-serif; font-weight: 400; font-size: 30px;">Circular Charts with kinetic JS</h1></center>
+  <center>
+    <h1 style="margin-top: 100px; color: #567; font-family: 'Titillium Web', sans-serif; font-weight: 400; font-size: 30px;">Circular Charts with kinetic JS</h1>
+  </center>
 
-<br />
+  <br />
 
-<div id="kinetic_charts" style="text-align: center;">
-</div>
-<div id="legends"></div>
-<script type="text/javascript">
+  <div id="kinetic_charts" style="text-align: center;">
+  </div>
+  <div id="legends"></div>
+  <script type="text/javascript">
+    var data_array = [{
+      data: "HTML5/CSS3",
+      value: "30",
+      color: "#97BE0D"
+    }, {
+      data: "Javascript",
+      value: "30",
+      color: "#D84F5F"
+    }, {
+      data: "Ruby on Rails",
+      value: "30",
+      color: "#88B8E6"
+    }, {
+      data: "Others",
+      value: "10",
+      color: "#D98B46"
+    }]
 
-  var data_array = [
-    { data: "HTML5/CSS3", value: "30", color: "#97BE0D"},
-    { data: "Javascript", value: "30", color: "#D84F5F"},
-    { data: "Ruby on Rails", value: "30", color: "#88B8E6"},
-    { data: "Others", value: "10", color: "#D98B46"}
-  ]
-
-  var stage = new Kinetic.Stage({
+    var stage = new Kinetic.Stage({
       container: 'kinetic_charts',
       width: 400,
       height: 400,
       fill: "def"
     });
 
-  var layer = new Kinetic.Layer();
+    var x = 200,
+      y = 200;
 
-  var x = 200, y = 200;
+    function rand() {
+      return Math.floor((Math.random() * (360 - 0)) + 0);
+    }
 
-  function rand(){ return Math.floor((Math.random()*(360-0))+0); }
+    function value_to_angle(value) {
+      return (360 / 100) * parseFloat(value);
+    }
+    var radius = 40 * data_array.length;
+    var startAngle = 0;
+    var layer = new Kinetic.Layer();
 
-  function value_to_angle(value){
-    return (360/100)*parseFloat(value);
-  }
-  var radius = 40;
-  var startAngle = 0;
+    for (var i = 0; i < data_array.length; i++) {
+      drawer(i);
+    }
 
-  for(var i = 0; i < data_array.length; i++){
+    function drawer(i) {
+      var data_value = data_array[i].value;
 
-    var data_value = data_array[i].value;
+      $('#legends').append('<div><span style="background: ' + data_array[i].color +
+        ';"></span>' + data_array[i].data + '</div>')
 
-    $('#legends').append('<div><span style="background: '+data_array[i].color+';"></span>'+data_array[i].data+'</div>')
+      var endAngle = startAngle + value_to_angle(data_value);
 
-    var endAngle = startAngle + value_to_angle(data_value);
-
-    var arc = new Kinetic.Shape({
-      drawFunc: function(canvas) {
+      var arc = new Kinetic.Shape({
+        drawFunc: function(canvas) {
           var context = canvas.getContext('2d');
           context.beginPath();
-          context.arc(x, y, this.getAttrs().radius, this.getAttrs().startAngle, this.getAttrs().endAngle, false);
+          context.arc(x, y, this.getAttrs().radius, this.getAttrs().startAngle,
+            this.getAttrs().endAngle, false);
           canvas.stroke(this);
-      },
-      fill: data_array[i].color,
-      stroke: data_array[i].color,
-      radius: radius,
-      startAngle: startAngle*0.0174532925,
-      endAngle: endAngle*0.0174532925,
-      strokeWidth: 20
-      });
-    
-    arc.on('mousemove', function() {
-
-
-
-    })
-
-    startAngle = endAngle;
-
-    var circle_outer = new Kinetic.Circle({
-        x: x,
-        y: y,
+        },
+        fill: data_array[i].color,
+        stroke: data_array[i].color,
         radius: radius,
-        stroke: '#ddd',
+        startAngle: startAngle * 0.0174532925,
+        endAngle: endAngle * 0.0174532925,
         strokeWidth: 20
       });
-    
-    layer.add(circle_outer);
-    layer.add(arc)
 
-    radius += 30;
-  }
+      startAngle = endAngle;
 
-  stage.add(layer);
+      var circle_outer = new Kinetic.Shape({
+        drawFunc: function(canvas) {
+          var context = canvas.getContext('2d');
+          context.beginPath();
+          context.arc(x, y, this.getAttrs().radius, this.getAttrs().startAngle,
+            this.getAttrs().endAngle, false);
+          canvas.stroke(this);
+        },
+        fill: '#ddd',
+        stroke: '#ddd',
+        radius: radius,
+        startAngle: 0,
+        endAngle: 360 * 0.0174532925,
+        strokeWidth: 20
+      });
 
-</script>
+      layer.add(circle_outer);
+      layer.add(arc);
+
+      arc.on('mouseover', function(e) {
+        (new Kinetic.Tween({
+          node: this,
+          strokeWidth: 25,
+          easing: Kinetic.Easings['ElasticEaseInOut']
+        })).play();
+      });
+      arc.on('mouseout', function(e) {
+        (new Kinetic.Tween({
+          node: this,
+          strokeWidth: 20,
+          easing: Kinetic.Easings['ElasticEaseInOut']
+        })).play();
+      });
+
+      radius -= 30;
+      stage.add(layer);
+    }
+  </script>
 
 </body>
+
 </html>
